# AIVis

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md
application/: CMakeLists.txt  Main.qml  main.cpp
application/src/: loader.cpp  loader.h
application/test/: CMakeLists.txt  tst_application.cpp
common/: utils.h
impl/: CMakeLists.txt
impl/ANN/: CMakeLists.txt  annrepsourceconfig.cpp
impl/ANN/test/: CMakeLists.txt  tst_annrepresentation.cpp
impl/fdeepbridge/: CMakeLists.txt  FdeepInternalRep.h  annrepsourceconfig.h  anntransformer.cpp  anntransformer.h  ext_data_model.h  ext_data_model_layer.h  external_output_dict.h  fdeepdata.cpp  fdeepdata.h  fdeepdataloader.cpp  fdeeplayer.cpp  fdeeplayer.h  fdeepmodel.cpp  fdeepmodel.h  fdeepmodelloader.cpp  import_ext_data_model.h
impl/fdeepbridge/layers/: fdeepdenselayer.cpp  fdeepdenselayer.h  fdeeplayerifacefactory.cpp  fdeeplayerifacefactory.h  fdeepunknownlayer.cpp  fdeepunknownlayer.h
impl/fdeepbridge/public/: fdeepdataloader.h  fdeepmodelloader.h
impl/fdeepbridge/test/: CMakeLists.txt  tst_annrepresentation.cpp  tst_fdeepbridge.cpp
interface/: CMakeLists.txt
interface/src/: AbstractDataItem.h  DataInterface.h  DataLoaderInterface.h  LayerInterface.h  ModelInterface.h  ModelLoaderInterface.h  abstractaifactory.cpp  abstractaifactory.h  abstractairepresentation.cpp  abstractairepresentation.h  abstractaitransformer.cpp  abstractaitransformer.h  abstractrepsourceconfig.cpp  abstractrepsourceconfig.h
interface/src/layers/: denselayerinterface.h
interface/test/: CMakeLists.txt  tst_interface.cpp
test/: CMakeLists.txt
test/data/: simple_image_classifier.json
test/viewmodels/: CMakeLists.txt  tst_denselayerviewmodel.cpp  tst_viewmodels.cpp
viewmodels/: CMakeLists.txt  aimodelviewmodel.cpp  aimodelviewmodel.h  layerviewmodelinterface.h  layerviewregistry.cpp  layerviewregistry.h  qtutils.h  zoomhelper.cpp  zoomhelper.h
viewmodels/layers/: denselayerviewmodel.cpp  denselayerviewmodel.h  layerviewmodelregistry.cpp  layerviewmodelregistry.h  unknownlayerviewmodel.cpp  unknownlayerviewmodel.h
viewmodels/qml/: AIModelView.qml  BackButton.qml  HomeView.qml  LayerPreview.qml  Zoomable.qml
viewmodels/qml/layers/: DenseLayerNodeDelegate.qml  DenseLayerPreview.qml  DenseLayerView.qml  UnknownLayerPreview.qml
viewmodels/shaders/: recolor.frag
